--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "async": "^3.1.0",
+    "cookie-parser": "^1.4.4",
+    "express": "^4.17.1",
+    "node-jose": "^1.1.3",
+    "request": "^2.88.0",
+    "swig-templates": "^2.0.3",
+    "underscore": "^1.9.1"
   }
 }
