--- a/package.json
+++ b/package.json
@@ -1,20 +1,45 @@
 {
-  "name": "example",
+  "name": "ha-oidc-example",
   "version": "1.2.1",
-  "description": "",
+  "description": "HERE Account - Authentication via OpenID Connect - Reference Implementation NodeJS application",
+  "main": "ha-oidc-example.js",
+  "contributors": [
+    {
+      "name": "HERE Account team",
+      "email": "HERE_ACCOUNT_SUPPORT@here.com"
+    }
+  ],
+  "author": {
+    "name": "HERE Global B.V. and its affiliate(s)",
+    "url": "https://here.com"
+  },
+  "keywords": [
+    "HERE",
+    "HERE Technologies"
+  ],
   "engines": {
     "node": ">=6.9.1 <18.0.0"
   },
   "scripts": {
     "start": "node index.js"
   },
+  "repository": {
+    "type": "git",
+    "url": "ssh://git@main.gitlab.in.here.com:3389/olp/aa/aa-front-end/ha-oidc-example.git"
+  },
   "dependencies": {
-    "async": "^3.1.0",
+    "async": "^3.2.4",
+    "axios": "0.20.0",
     "cookie-parser": "^1.4.4",
     "express": "^4.17.1",
     "node-jose": "^1.1.3",
+    "oauth-1.0a": "^2.2.6",
     "request": "^2.88.0",
     "swig-templates": "^2.0.3",
     "underscore": "^1.9.1"
+  },
+  "license": "ISC",
+  "devDependencies": {
+    "claudia": "^5.14.1"
   }
 }
